--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-body {
-    background-color: aqua;
+h1{
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+h2{
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
